[gd_scene load_steps=6 format=3 uid="uid://ct4uy8junty6s"]

[ext_resource type="Script" path="res://UI/Menus/Level Select/script/job_select.gd" id="1_1clxu"]
[ext_resource type="Texture2D" uid="uid://2rpvrynh3cwd" path="res://Art/UI/WorldSelect/blank-sky.png" id="2_1xhkl"]
[ext_resource type="PackedScene" uid="uid://dm7ht8l2fnyl2" path="res://UI/Menus/Level Select/world_icon.tscn" id="3_et21s"]
[ext_resource type="PackedScene" uid="uid://dlagwqio44fol" path="res://UI/Menus/Level Select/player_icon.tscn" id="4_tg6cx"]
[ext_resource type="AudioStream" uid="uid://cnrl5pjsjlyno" path="res://SFX/menu-music-1.wav" id="5_vy5lc"]

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1clxu")

[node name="Blank-sky" type="Sprite2D" parent="."]
modulate = Color(0.65098, 0.65098, 0.65098, 1)
position = Vector2(292, 188)
scale = Vector2(0.238515, 0.231154)
texture = ExtResource("2_1xhkl")

[node name="WorldIcon" parent="." instance=ExtResource("3_et21s")]
offset_left = 31.0
offset_top = 232.0
offset_right = 95.0
offset_bottom = 272.0

[node name="WorldIcon2" parent="." instance=ExtResource("3_et21s")]
offset_left = 165.0
offset_top = 48.0
offset_right = 229.0
offset_bottom = 88.0
world_index = 2

[node name="WorldIcon3" parent="." instance=ExtResource("3_et21s")]
offset_left = 261.0
offset_top = 227.0
offset_right = 325.0
offset_bottom = 267.0
world_index = 3

[node name="WorldIcon4" parent="." instance=ExtResource("3_et21s")]
offset_left = 388.0
offset_top = 56.0
offset_right = 452.0
offset_bottom = 96.0
world_index = 4

[node name="WorldIcon5" parent="." instance=ExtResource("3_et21s")]
offset_left = 524.0
offset_top = 231.0
offset_right = 588.0
offset_bottom = 271.0
world_index = 5

[node name="playerIcon" parent="." instance=ExtResource("4_tg6cx")]
layout_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vy5lc")
autoplay = true
